[gd_scene load_steps=14 format=2]

[ext_resource path="res://menus/chain/chain5.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/GUI/Signs/Main/Exit.png" type="Texture" id=3]
[ext_resource path="res://Art/GUI/Signs/Main/TitleSign.png" type="Texture" id=4]
[ext_resource path="res://Art/GUI/Signs/Main/Play.png" type="Texture" id=5]
[ext_resource path="res://Art/GUI/Signs/Main/Options.png" type="Texture" id=6]
[ext_resource path="res://menus/main_menu/menu_sign.gd" type="Script" id=7]
[ext_resource path="res://menus/chain/chain2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Art/GUI/Signs/Main/OptionsSelected.png" type="Texture" id=9]
[ext_resource path="res://Art/GUI/Signs/Main/ExitSelected.png" type="Texture" id=10]
[ext_resource path="res://Art/GUI/Signs/Main/PlaySelected.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 136, 32 )

[node name="MenuSign" type="Node2D"]
use_parent_material = true
script = ExtResource( 7 )
button_paths = [ NodePath("Play"), NodePath("Options"), NodePath("Exit") ]

[node name="Mount" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -440 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mount"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Chains" type="Node2D" parent="."]
use_parent_material = true

[node name="Chain1" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( -112, -437 )
first_mount_path = NodePath("../../Mount")
last_mount_path = NodePath("../../Title")

[node name="Chain2" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( 112, -437 )
first_mount_path = NodePath("../../Mount")
last_mount_path = NodePath("../../Title")

[node name="Chain3" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( -64, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../Play")

[node name="Chain4" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( 64, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../Play")

[node name="Chain5" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( -64, -273 )
first_mount_path = NodePath("../../Play")
last_mount_path = NodePath("../../Options")

[node name="Chain6" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( 64, -273 )
first_mount_path = NodePath("../../Play")
last_mount_path = NodePath("../../Options")

[node name="Chain7" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( -64, -214 )
first_mount_path = NodePath("../../Options")
last_mount_path = NodePath("../../Exit")

[node name="Chain8" parent="Chains" instance=ExtResource( 8 )]
position = Vector2( 64, -214 )
first_mount_path = NodePath("../../Options")
last_mount_path = NodePath("../../Exit")

[node name="Title" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -360 )
z_index = 15
z_as_relative = false
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Title"]
use_parent_material = true
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -292 )
collision_layer = 32
collision_mask = 32
normal_texture = ExtResource( 5 )
focused_texture = ExtResource( 11 )
neighbour_bottom = NodePath("../Options")

[node name="Options" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -231 )
collision_layer = 32
collision_mask = 32
normal_texture = ExtResource( 6 )
focused_texture = ExtResource( 9 )
neighbour_top = NodePath("../Play")
neighbour_bottom = NodePath("../Exit")

[node name="Exit" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -172 )
collision_layer = 32
collision_mask = 32
normal_texture = ExtResource( 3 )
focused_texture = ExtResource( 10 )
neighbour_top = NodePath("../Options")

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
